# budgetwarrior

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  Jenkinsfile  Makefile  README.md  README.rst  budget.man  budgetrc.sample  build_macos.sh  compile_commands.json  sonar-project.properties
.github/workflows/: cmake.yml  make.yml  sonar.yml
completions/: bash  zsh
include/: accounts.hpp  api.hpp  args.hpp  assert.hpp  assets.hpp  budget_exception.hpp  compute.hpp  config.hpp  console.hpp  currency.hpp  data.hpp  data_cache.hpp  date.hpp  debts.hpp  earnings.hpp  expenses.hpp  filter_iterator.hpp  fortune.hpp  gc.hpp  guid.hpp  help.hpp  http.hpp  incomes.hpp  liabilities.hpp  likely.hpp  logging.hpp  module_traits.hpp  money.hpp  objectives.hpp  overview.hpp  predict.hpp  recurring.hpp  report.hpp  retirement.hpp  server.hpp  server_api.hpp  server_lock.hpp  server_pages.hpp  share.hpp  summary.hpp  (+7 more)
include/api/: accounts_api.hpp  assets_api.hpp  debts_api.hpp  earnings_api.hpp  expenses_api.hpp  fortunes_api.hpp  incomes_api.hpp  (+4 more)
src/: CMakeLists.txt  accounts.cpp  accounts_pages.cpp  api.cpp  args.cpp  asset_classes.cpp  asset_shares.cpp  asset_values.cpp  asset_values_pages.cpp  assets.cpp  assets_pages.cpp  budget.cpp  budget_exception.cpp  compute.cpp  config.cpp  console.cpp  console_writer.cpp  currency.cpp  data.cpp  data_cache.cpp  date.cpp  debts.cpp  earnings.cpp  earnings_pages.cpp  expenses.cpp  expenses_pages.cpp  fortune.cpp  fortunes_pages.cpp  gc.cpp  guid.cpp  help.cpp  html_writer.cpp  incomes.cpp  liabilities.cpp  logging.cpp  money.cpp  net_worth_pages.cpp  objectives.cpp  objectives_pages.cpp  overview.cpp  (+18 more)
src/api/: accounts_api.cpp  assets_api.cpp  debts_api.cpp  earnings_api.cpp  expenses_api.cpp  fortunes_api.cpp  incomes_api.cpp  objectives_api.cpp  recurrings_api.cpp  server_api.cpp  wishes_api.cpp
src/pages/: accounts_pages.cpp  asset_classes_pages.cpp  asset_shares_pages.cpp  asset_values_pages.cpp  assets_pages.cpp  debts_pages.cpp  earnings_pages.cpp  expenses_pages.cpp  fortunes_pages.cpp  incomes_pages.cpp  index_pages.cpp  liabilities_pages.cpp  net_worth_pages.cpp  objectives_pages.cpp  overview_pages.cpp  recurrings_pages.cpp  report_pages.cpp  retirement_pages.cpp  server_debts_pages.cpp  server_pages.cpp  server_wishes_pages.cpp  wishes_pages.cpp
tools/: yfinance_quote.py
(+27 files in other folders)
